added font changes

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,11 +1,24 @@
 <div id="home" class="home row d-flex align-items-center container-fluid mx-auto">
     <div class="col-1"></div>
     <div class="border-left bg-transparent col-md-5 col-sm-12">
-        <p class="welcome-title">Welcome to the</p>
-        <p class="display-1 welcome-title text-uppercase font-weight-bold">cosas hub</p>
-        <p class="w-75 welcome-title">Your one-stop location for all news and information related to Co-op at UBC Sauder
+        <p class="welcome-title">Welcome to</p>
+        <p class="display-2 welcome-title text-uppercase font-weight-bold">cosas central</p>
+        <p class="w-75 welcome-title">Your one-stop location for all news and information for student-led Co-op
+            engagements at UBC Sauder
             School of Business</p>
+        <div class="row welcome-title col-5">
+            <a class="email" data-placement="bottom" role="button" data-toggle="popover" title="Email"
+                data-content="cosas.sauder@gmail.com">
+                <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/gmail.svg">
+            </a>
+            <a href="https://www.facebook.com/cosas.ubc/" class="">
+                <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
+            </a>
+            <a href="" class="">
+                <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/instagram.svg">
+            </a>
+
+        </div>
     </div>
 </div>
 </div>
-
