--- a/_includes/team.html
+++ b/_includes/team.html
@@ -24,7 +24,7 @@
                                 Specialization: {{ person.specialization }}<br>
                                 Year: {{ person.year }} </p>
                             <div class="container row mx-auto justify-content-center">
-                                <a class="email" data-placement="left" role="button" data-toggle="popover" title="Email"
+                                <a class="team-email" data-placement="left" role="button" data-toggle="popover" title="Email"
                                     data-content="{{ person.email }}">
                                     <img class="footer-icon"
                                         src="{{ site.baseurl }}/static_files/assets/svg/gmail.svg">
