--- a/static_files/css/styles.css
+++ b/static_files/css/styles.css
@@ -19,6 +19,7 @@ body, html {
     height: 100;
     overflow-x: hidden;
     background-color: white;
+    font-family: 'Open Sans';
 }
 
 .row:before, .row:after {
@@ -84,7 +85,7 @@ a:active, a:hover {
     display: flex;
     align-items:center;
     background-color: var(--cosas-secondary);
-    background-image: url('../static_files/assets/svg/2020.svg');
+    background-image: url('../assets/svg/2020.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-position-x: 85%;
@@ -110,7 +111,7 @@ a:active, a:hover {
 
 .about-divider {
     height: 15vh;
-    background-image: url('../static_files/assets/images/ubc.jpg');
+    background-image: url('../assets/images/ubc.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -122,7 +123,7 @@ a:active, a:hover {
 #contact {
     background-color: var(--cosas-sapphires);
     padding-bottom: var(--section-bottom-padding);
-    background-image: url('../static_files/assets/svg/contact-us-flipped.svg'), url('../static_files/assets/svg/contact-us.svg');
+    background-image: url('../assets/svg/contact-us-flipped.svg'), url('../assets/svg/contact-us.svg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: left, right;
