--- a/_includes/initiative.html
+++ b/_includes/initiative.html
@@ -5,7 +5,7 @@
         <div id="test" class="initiatives overflow-auto load-hidden card card-body bg-primary col-md-5 m-2">
             <a href="{{ initiative.url }}" class="card">
                 
-                    <img class="col-8 img-card-top mx-auto" src='{{ site.baseurl }}/static_files/assets/svg/{{ initiative.image }}'>                
+                    <img class="h-100 col-8 img-card-top mx-auto" src='{{ site.baseurl }}/static_files/assets/svg/{{ initiative.image }}'>                
                 
                 <div class="card-footer">
                     <h4>{{ initiative.title }}</h4>
