--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,7 +2,7 @@
     <div class="col-1"></div>
     <div class="border-left bg-transparent col-md-5 col-sm-12">
         <p class="welcome-title">Welcome to</p>
-        <p class="display-2 welcome-title text-uppercase font-weight-bold">cosas central</p>
+        <p class="display-2 col-12 welcome-title text-uppercase font-weight-bold">cosas central</p>
         <p class="w-75 welcome-title">Your one-stop location for all news and information for student-led Co-op
             engagements at UBC Sauder
             School of Business</p>
@@ -11,8 +11,8 @@
                 data-content="cosas.sauder@gmail.com">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/gmail.svg">
             </a>
-            <a href="https://www.facebook.com/cosas.ubc/" class="">
-                <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
+            <a href="https://www.facebook.com/cosas.ubc/">
+                <img class="footer-icon px-3 mx-3" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
             </a>
             <a href="" class="">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/instagram.svg">
