--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,5 +1,5 @@
 <div id="events" class="container section">
-    <p class="display-4 text-center section-header">Our Events</p>
+    <p class="display-4 text-center section-header">Upcoming Events</p>
     <div class="card card-body">
         {% for post in site.posts reversed limit:5 %}
 
