--- a/_includes/home.html
+++ b/_includes/home.html
@@ -12,7 +12,7 @@
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/gmail.svg">
             </a>
             <a href="https://www.facebook.com/cosas.ubc/">
-                <img class="footer-icon px-3 mx-3" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
+                <img class="footer-icon mx-3" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
             </a>
             <a href="" class="">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/instagram.svg">
