--- a/_includes/initiative.html
+++ b/_includes/initiative.html
@@ -1,13 +1,13 @@
 <div id="initiatives" class="container-fluid section">
     <p class="display-4 text-center section-header">Featured Initiatives</p>
-    <div class="row justify-content-center">
+    <div class="row h-100 justify-content-center">
         {% for initiative in site.initiatives %}
-        <div id="test" class="initiatives overflow-auto load-hidden card card-body bg-primary col-md-5 m-2">
-            <a href="{{ initiative.url }}" class="card">
-                
-                    <img class="h-100 col-8 img-card-top mx-auto" src='{{ site.baseurl }}/static_files/assets/svg/{{ initiative.image }}'>                
-                
-                <div class="card-footer">
+        <div id="test" class="initiatives load-hidden card card-body bg-primary col-md-5 m-2">
+            <a href="{{ initiative.url }}" class="card h-100">
+
+                <img class="col-8 img-card-top mx-auto"
+                    src='{{ site.baseurl }}/static_files/assets/svg/{{ initiative.image }}'>
+                <div class="card-footer mx-auto h-100 overflow-auto ">
                     <h4>{{ initiative.title }}</h4>
                     <p>{{ initiative.excerpt }}</p>
                 </div>
