--- a/_layouts/initiatives.html
+++ b/_layouts/initiatives.html
@@ -2,11 +2,13 @@
 layout: default
 ---
 {% include navigation.html %}
-<div class="jumbotron bg-primary"></div>
+<div class="jumbotron bg-primary" style="height: 25vh"></div>
 
 <div class="container">
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }}</p>
+    <div class="col-md-9 mx-auto">
+        <h1>{{ page.title }}</h1>
+        <p>{{ page.date | date_to_string }}</p>
 
-{{ content }}
+        {{ content }}
+    </div>
 </div>
