--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 {% include navigation.html %}
-<div class="jumbotron bg-primary"></div>
+<div class="jumbotron bg-primary" style="height: 25vh"></div>
 
 <div class="container">
-<h1 class="text-center">{{ page.title }}</h1>
-<img class="col-5 m-3 d-block mx-auto" src="{{ site.baseurl }}/static_files/assets/{{ page.image }}">
-{{ page.content }}
-
+    <div class="col-9 mx-auto">
+        <h1 class="">{{ page.title }}</h1>
+        <p>{{ page.date | date_to_string }}</p>
+        {{ page.content }}
+    </div>
 </div>
 <hr class="container">
 {% include footer.html %}
