changed some text mods

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -40,7 +40,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p><b>Experience: </b>{{ person.experience }}</p>
+                        <p><b>Experience: </b><br>{{ person.experience }}</p>
                         <p>{{ person.content }}</p>
                     </div>
                     <div class="modal-footer">
