--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
         <p class="display-4 text-center section-header">Who We Are</p>
         <div class="container card bg-transparent border-0 text-left justify-content-center">
             {% for content_hash in site.data.about.cosas %}
-            <p class="col-md-8 mx-auto">{{ content_hash.content }}</p>
+            <p class="col-md-9 text-center mx-auto">{{ content_hash.content }}</p>
             <button class="btn col-md-3 mx-auto py-3 btn-primary" type="button" data-toggle="collapse"
                 data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Learn
                 More
@@ -17,7 +17,7 @@
                 <div class="card card-body col-md-5 m-2 overflow-auto">
                     <img class="img-card-top col-md-7 mx-auto" src='{{ content.img }}'>
                     <h4>{{ content.header }}</h4>
-                    <p class="flex-wrap">{{ content.content }}</p>
+                    <!-- <p class="flex-wrap">{{ content.content }}</p> -->
                 </div>
                 {% endfor %}
             </div>
