--- a/_includes/home.html
+++ b/_includes/home.html
@@ -6,7 +6,7 @@
         <p class="w-75 welcome-title">Your one-stop location for all news and information for student-led Co-op
             engagements at UBC Sauder
             School of Business</p>
-        <div class="row welcome-title col-5">
+        <div class="row welcome-title col-sm-8 sol-md-5">
             <a class="email" data-placement="bottom" role="button" data-toggle="popover" title="Email"
                 data-content="cosas.sauder@gmail.com">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/gmail.svg">
