--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="jumbotron bg-primary" style="height: 25vh"></div>
 
 <div class="container">
-    <div class="col-9 mx-auto">
+    <div class="col-md-9 mx-auto">
         <h1 class="">{{ page.title }}</h1>
         <p>{{ page.date | date_to_string }}</p>
         {{ page.content }}
