--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="static_files/assets/svg/2020.svg" />
+    <meta property="og:image" content="https://saudercosas.com/static_files/assets/svg/2020.svg" />
     <title>{{ page.title }}</title>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
