launched the application form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -48,7 +48,7 @@
         Thank you for reaching out to us, have a great day!
       </div>
       <div class="modal-footer">
-        <button id="clear-contact" type="button" class="text-dark btn btn-primary" data-dismiss="modal">Clear Form</button>
+        <button id="clear-contact" type="button" class="text-dark btn btn-primary" data-dismiss="modal">Clear Response</button>
       </div>
     </div>
   </div>
