--- a/_includes/home.html
+++ b/_includes/home.html
@@ -14,7 +14,7 @@
             <a href="https://www.facebook.com/cosas.ubc/">
                 <img class="footer-icon mx-3" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
             </a>
-            <a href="" class="">
+            <a href="https://www.instagram.com/cosas.sauder/" class="">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/instagram.svg">
             </a>
 
