--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
             <a href="https://www.facebook.com/cosas.ubc/">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/facebook.svg">
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/cosas.sauder/">
                 <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/instagram.svg">
             </a>
         </div>
