--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
       free to ask us any questions you may have about COSAS or Co-op in general. We also love feedback so if
       you have any suggestions or ideas for COSAS, please don't hesitate to fill in the form below!</p>
     <p class="card card-body border-0 justify-content-center text-center pt-1"><b>Weekly COSAS Question</b><br>
-      What is your dream co-op job? &#128525;
+      What are your awesome interview pro tips? &#128525;
     </p>
     <form id="contactForm" class="card card-body border-0" target="hidden_iframe"
       action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeIislOFaxbgp_w3xd1SFMlfCeG_h27MkhtDMw1yZF6PAo_nA/formResponse"
@@ -39,13 +39,13 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header bg-primary">
-        <h5 class="modal-title" id="exampleModalLabel">COSAS Thank You</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Thank You</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Thank you for reaching out to us, have a great day!
+        We love it when students reach out to us, have a great day!
       </div>
       <div class="modal-footer">
         <button id="clear-contact" type="button" class="text-dark btn btn-primary" data-dismiss="modal">Clear Response</button>
